@startuml
title Diagrama de Classes - Casa Inteligente

class Comodo {
    +cod_comodo: SERIAL
    +nome: STRING
    --
    +adicionarComodo()
    +editarComodo()
    +mostrarComodos()
    +removerComodo()
}

class Dispositivo {
    +cod_dispositivo: SERIAL
    +nome: STRING
    +status: BOOLEAN
    --
    +adicionarDispositivo()
    +editarDispositivo()
    +mostrarDispositivos()
    +removerDispositivo()
    +ligar()
    +desligar()
    +alterarStatus()
}

class Cena {
    +cod_cena: SERIAL
    +nome: STRING
    --
    +adicionarCena()
    +listarCenas()
    +removerCena()
    +executar()
    +pausar()
}

class Acao {
    +cod_acao: SERIAL
    +acao: STRING
    --
    +executarAcao()
}

class AcaoDispositivo {
    +cod_acao: INT
    +cod_dispositivo: INT
}

class AcaoCena {
    +cod_acao_cena: SERIAL
    +ordem: INT
    +intervalo: INT
    --
    +adicionarAcao()
    +removerAcao()
}

' ----------------- RELACIONAMENTOS -----------------
Comodo "1" -- "1..*" Dispositivo
Dispositivo "1" -- "1..*" "AcaoDispositivo"
Acao "1" -- "1..*" "AcaoDispositivo"
Cena "1" -- "1..*" "AcaoCena"
Acao "1" -- "1..*" "AcaoCena"

@enduml
